# fulgur

./: .gitignore  .markdownlint-cli2.yaml  .octocov.yml  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  mise.toml
.beads/: issues.jsonl  sync-state.json  sync_base.jsonl
.claude/rules/: markdownlint.md
.github/: cla-signatures.json  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  cla.yml  release-prepare.yml  release-python.yml  release-ruby.yml  release.yml  update-examples.yml  vrt-chrome-update.yml  wpt-nightly.yml
crates/fulgur/: Cargo.toml
crates/fulgur-cli/: Cargo.toml
crates/fulgur-core/: Cargo.toml
crates/fulgur-ruby/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Rakefile  fulgur.gemspec
crates/fulgur-vrt/: manifest.toml
crates/fulgur-wasm/: Cargo.toml
crates/fulgur-wasm/src/: lib.rs
crates/fulgur-wpt/: Cargo.toml  README.md  build.rs
crates/pyfulgur/: Cargo.toml  README.md  pyproject.toml
docs/: RELEASE_SETUP.md  css-support.md
docs/plans/: 2026-03-18-fulgur-design.md  2026-03-18-fulgur-implementation.md  2026-03-18-list-markers-design.md  2026-03-18-list-markers-implementation.md  2026-03-21-gcpm-header-footer-design.md  2026-03-21-gcpm-header-footer-implementation.md  2026-03-21-margin-box-layout-design.md  2026-03-21-release-workflow-design.md  2026-03-22-cli-expand.md  2026-03-22-cssparser-rewrite.md  2026-03-22-selector-mapping.md  2026-03-28-template-engine-design.md  2026-04-03-background-image-implementation.md  2026-04-11-blitz-thread-safety-investigation.md  (+56 more)
(+242 files in other folders)
