[package]
name = "fulgur-wasm"
version = "0.5.14"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebAssembly bindings for fulgur (HTML/CSS to PDF)"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fulgur = { path = "../fulgur" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
lopdf = "0.40.0"
serde_json = "1"
